[package]
name = "rozy"
version = "0.1.0"
edition = "2021"
description = "Interactive ELF size visualization for embedded Rust applications"
readme = "README.md"
license = "MIT"
keywords = ["elf", "embedded", "size", "visualization", "cargo-subcommand"]
categories = ["command-line-utilities", "development-tools", "embedded"]
include = ["src/**", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE"]
repository = "https://github.com/zhaolanhuang/rozy"
authors = ["Zhaolan Huang <zhaolan94@gmail.com>"]

[lib]
name = "rozy"
path = "src/lib.rs"

[[bin]]
name = "cargo-rozy"
path = "src/main.rs"

[dependencies]
addr2line = "0.27"
clap = { version = "4.5", features = ["derive"] }
object = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
